# opengl-fullscreen-app

./: CMakeLists.txt  README.md  build-debug.bat  build-release.bat  run-debug.bat  run-release.bat  window.cpp  window.hpp
src/: main.cpp  window.hpp
